Fix table width/placeholder time and options scrollbar

--- a/src/components/data-store-table-item/data-store-table-item.scss
+++ b/src/components/data-store-table-item/data-store-table-item.scss
@@ -42,4 +42,8 @@
   .header{
     color: rgba(0, 0, 0, 0.5);
   }
+
+  .options{
+    overflow-x: auto;
+  }
 }
